Updated CSS to fix course popup sizing and background color
Updated CSS to fix course popup sizing and background color so the course popup no longer goes off screen when too big, and instead has a scroll bar, and on the homepage there is no cutoff for the background color and it extends all the way down.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,10 @@
   background-color: #eeeeee;
 }
 
+.HomePage .Courses {
+  background-color: #eeeeee;
+}
+
 .AdvisorsPage {
   background-color: #eeeeee;
 }
