--- a/frontend/src/Components/CourseInfoPopup.css
+++ b/frontend/src/Components/CourseInfoPopup.css
@@ -16,10 +16,12 @@
     padding: 32px;
     width: 100%;
     max-width: 640px;
+    max-height: 640px;
     border-radius: 20px;
     border: 2px solid black;
     background-color: white;
     text-align: left;
+    overflow-y: auto;
 }
 
 .CourseInfoPopupInner .close-popup-button {
